--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -431,7 +431,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home</span>
+        <span>Home 1</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -786,7 +786,7 @@ async function loadTasks() {
       };
     });
 
-    Object.keys(tasksByTitle).sort().forEach(title => {
+    Object.keys(tasksByTitle).forEach(title => {
   const task = tasksByTitle[title];
   const turns = prepareTaskTurnData(task, selectedDate); // 👈 Correct! Only use prepareTaskTurnData
   const date = task.date;
