--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -438,7 +438,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 1</span>
+        <span>Home</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -848,6 +848,7 @@ async function loadTasks() {
       `;
 
       container.appendChild(div);
+      
 
       div.querySelector(".task-title").addEventListener("click", () => {
         const details = div.querySelector(".task-details");
@@ -860,7 +861,7 @@ async function loadTasks() {
       });
     });
 
-    // 🆕 Enable drag and drop for this task
+    // 🛠 Enable drag and drop AFTER creating the div
 enableDragAndDrop(div);
 
     if (!container.innerHTML) {
